Updated format, error handling and clean up